implementation of localization

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,73 @@
-msg.welcome=Welcome to
+btn.add=Add
+btn.addToCart=Add to Cart
+btn.cart=Cart
+btn.catalogue=Catalogue
+btn.createOrder=Create Order
+btn.delete=Delete
+btn.details=Details
+btn.edit=Edit
+btn.home=Home
+btn.login=Login
+btn.logout=Logout
+btn.orders=Orders
+btn.profile=My Profile
+btn.register=Registering
+btn.save=Save
+btn.saveProfile=SaveProfile
+btn.users=Users
+
+
+msg.accessForbidden))=Do you think you are the smartest? Access forbidden
+msg.accessForbidden=ACCESS FORBIDDEN
+msg.addBook=Book added to database
+msg.addToCart=Book added to cart
 msg.emptyCart=Order successfully created
+msg.errorText=The page you are looking for was moved, removed, renamed or might never exist
+msg.hello=Hello
+msg.home=Go to Homepage
+msg.invalidCredential=Invalid credentials, please try again
+msg.loginOrSign=Login or sign up, please
 msg.notSign=Please, sign in or sign up to create order
+msg.pageNotFound=PAGE NOT FOUND
+msg.person=Guest!
+msg.welcome=Welcome to
+msg.entityNotFound={entity} with ID: {0} not found
+
+
+title.action=Action
+title.addBook=Add Book
+title.admin=Administrator
+title.author=Author
+title.book=Book
+title.books=Books
+title.cart=Cart
+title.count=Count
+title.cover=Cover
+title.customer=Customer
+title.editBook=Edit Book
+title.editProfile=Edit Profile
+title.email=Email
+title.emptyCart=Your cart is empty
+title.field=Field
+title.firstName=First Name
+title.hard=Hardcover
+title.id=ID
+title.isbn=ISBN
+title.lastName=Last Name
+title.loginPage=Login Page
+title.manager=Manager
+title.name=Name
+title.order=Order
+title.pages=Pages
+title.password=Password
+title.price=Price
+title.profile=Profile
+title.quantity=Quantity
+title.registration=Registration
+title.role=Role
+title.soft=Paperback
+title.status=Status
+title.time=Date/Time
+title.title=Title
+title.user=User
+title.value=Value
