--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,1 +1,71 @@
-msg/welcome=Willkommen zu
+btn.addToCart=in den Warenkorb legen
+btn.cart=Warenkorb
+btn.catalogue=Katalog
+btn.createOrder=Bestellung anlegen
+btn.delete=Löschen
+btn.details=Einzelheiten
+btn.edit=Bearbeiten
+btn.login=Anmeldung
+btn.logout=Ausloggen
+btn.orders=Aufträge
+btn.profile=Mein Profil
+btn.register=Registrieren
+btn.save=Speichern
+btn.saveProfile=Profil speichern
+btn.users=Benutzer
+
+
+msg.accessForbidden))=Glaubst du, du bist der Klügste? Zugriff verboten
+msg.accessForbidden=ZUGANG VERBOTEN
+msg.addBook=Buch zur Datenbank hinzugefügt
+msg.addToCart=Buch zum Warenkorb hinzugefügt
+msg.emptyCart=Bestellung erfolgreich erstellt
+msg.errorText=Die Seite, nach der Sie suchen, wurde verschoben, entfernt, umbenannt oder existiert möglicherweise nie
+msg.hello=Hallo
+msg.home=Gehen Sie zur Startseite
+msg.invalidCredential=Ungültige Anmeldedaten, bitte versuchen Sie es erneut
+msg.loginOrSign=Melden Sie sich an oder registrieren Sie sich bitte
+msg.notSign=Bitte melden Sie sich an oder registrieren Sie sich, um eine Bestellung zu erstellen
+msg.pageNotFound=SEITE NICHT GEFUNDEN
+msg.person=Gast!
+msg.welcome=Willkommen zu
+msg.entityNotFound={entity} mit ID: {0} nicht gefunden
+
+
+title.action=Aktion
+title.addBook=Buch hinzufügen
+title.admin=Administrator
+title.author=Autor
+title.book=Buch
+title.books=Bücher
+title.cart=Warenkorb
+title.count=Zählen
+title.cover=Abdeckung
+title.customer=Kunde
+title.editBook=Buch bearbeiten
+title.editProfile=Profil bearbeiten
+title.email=Email
+title.emptyCart=Ihr Warenkorb ist leer
+title.field=Aufstellen
+title.firstName=Vorname
+title.hard=Gebundene Ausgabe
+title.id=ID
+title.isbn=ISBN
+title.lastName=Nachname
+title.loginPage=Loginseite
+title.manager=Manager
+title.name=Name
+title.order=Befehl
+title.pages=Seiten
+title.password=Passwort
+title.price=Preis
+title.profile=Profil
+title.quantity=Menge
+title.registration=Anmeldung
+title.role=Rolle
+title.soft=Taschenbuch
+title.status=Status
+title.time=Terminzeit
+title.title=Titel
+title.user=Benutzer
+title.value=Wert
