--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,3 +1,4 @@
+btn.add=Hinzufügen
 btn.addToCart=in den Warenkorb legen
 btn.cart=Warenkorb
 btn.catalogue=Katalog
@@ -5,6 +6,7 @@ btn.createOrder=Bestellung anlegen
 btn.delete=Löschen
 btn.details=Einzelheiten
 btn.edit=Bearbeiten
+btn.home=Zur Hauptsache
 btn.login=Anmeldung
 btn.logout=Ausloggen
 btn.orders=Aufträge
