--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -42,7 +42,7 @@ title.book=Buch
 title.books=Bücher
 title.cart=Warenkorb
 title.count=Zählen
-title.cover=Abdeckung
+title.cover=Bindung
 title.customer=Kunde
 title.editBook=Buch bearbeiten
 title.editProfile=Profil bearbeiten
@@ -71,3 +71,4 @@ title.time=Terminzeit
 title.title=Titel
 title.user=Benutzer
 title.value=Wert
+title.picture=Bild
