--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,13 +7,17 @@ btn.delete=Delete
 btn.details=Details
 btn.edit=Edit
 btn.home=Home
+btn.load=Load
 btn.login=Login
 btn.logout=Logout
+btn.myOrders=My Orders
 btn.orders=Orders
 btn.profile=My Profile
 btn.register=Registering
 btn.save=Save
+btn.saveOrder=Save Order
 btn.saveProfile=SaveProfile
+btn.search=Search
 btn.users=Users
 
 
@@ -22,6 +26,7 @@ msg.accessForbidden=ACCESS FORBIDDEN
 msg.addBook=Book added to database
 msg.addToCart=Book added to cart
 msg.emptyCart=Order successfully created
+msg.entityNotFound={entity} with ID: {0} not found
 msg.errorText=The page you are looking for was moved, removed, renamed or might never exist
 msg.hello=Hello
 msg.home=Go to Homepage
@@ -31,20 +36,25 @@ msg.notSign=Please, sign in or sign up to create order
 msg.pageNotFound=PAGE NOT FOUND
 msg.person=Guest!
 msg.welcome=Welcome to
-msg.entityNotFound={entity} with ID: {0} not found
 
 
 title.action=Action
 title.addBook=Add Book
 title.admin=Administrator
 title.author=Author
+title.avatar=Avatar
 title.book=Book
 title.books=Books
+title.cancelled=Cancelled
 title.cart=Cart
 title.count=Count
 title.cover=Cover
 title.customer=Customer
+title.dateTime=Date/Time order
+title.delivered=Delivered
+title.delivering=Delivering
 title.editBook=Edit Book
+title.editOrder=Edit Order
 title.editProfile=Edit Profile
 title.email=Email
 title.emptyCart=Your cart is empty
@@ -52,6 +62,7 @@ title.field=Field
 title.firstName=First Name
 title.hard=Hardcover
 title.id=ID
+title.image=Picture
 title.isbn=ISBN
 title.lastName=Last Name
 title.loginPage=Login Page
@@ -60,6 +71,7 @@ title.name=Name
 title.order=Order
 title.pages=Pages
 title.password=Password
+title.pending=Pending
 title.price=Price
 title.profile=Profile
 title.quantity=Quantity
@@ -71,4 +83,3 @@ title.time=Date/Time
 title.title=Title
 title.user=User
 title.value=Value
-title.picture=Picture
