--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -7,13 +7,17 @@ btn.delete=Löschen
 btn.details=Einzelheiten
 btn.edit=Bearbeiten
 btn.home=Zur Hauptsache
+btn.load=Wird geladen
 btn.login=Anmeldung
 btn.logout=Ausloggen
+btn.myOrders=Meine Bestellungen
 btn.orders=Aufträge
 btn.profile=Mein Profil
 btn.register=Registrieren
 btn.save=Speichern
+btn.saveOrder=Bestellung speichern
 btn.saveProfile=Profil speichern
+btn.search=Suche
 btn.users=Benutzer
 
 
@@ -22,6 +26,7 @@ msg.accessForbidden=ZUGANG VERBOTEN
 msg.addBook=Buch zur Datenbank hinzugefügt
 msg.addToCart=Buch zum Warenkorb hinzugefügt
 msg.emptyCart=Bestellung erfolgreich erstellt
+msg.entityNotFound={entity} mit ID: {0} nicht gefunden
 msg.errorText=Die Seite, nach der Sie suchen, wurde verschoben, entfernt, umbenannt oder existiert möglicherweise nie
 msg.hello=Hallo
 msg.home=Gehen Sie zur Startseite
@@ -31,20 +36,25 @@ msg.notSign=Bitte melden Sie sich an oder registrieren Sie sich, um eine Bestell
 msg.pageNotFound=SEITE NICHT GEFUNDEN
 msg.person=Gast!
 msg.welcome=Willkommen zu
-msg.entityNotFound={entity} mit ID: {0} nicht gefunden
 
 
 title.action=Aktion
 title.addBook=Buch hinzufügen
 title.admin=Administrator
 title.author=Autor
+title.avatar=Benutzerbild
 title.book=Buch
 title.books=Bücher
+title.cancelled=Abgesagt
 title.cart=Warenkorb
 title.count=Zählen
 title.cover=Bindung
 title.customer=Kunde
+title.dateTime=Bestellung terminzeit
+title.delivered=Geliefert
+title.delivering=Liefern
 title.editBook=Buch bearbeiten
+title.editOrder=Bestellung bearbeiten
 title.editProfile=Profil bearbeiten
 title.email=Email
 title.emptyCart=Ihr Warenkorb ist leer
@@ -52,6 +62,7 @@ title.field=Aufstellen
 title.firstName=Vorname
 title.hard=Gebundene Ausgabe
 title.id=ID
+title.image=Bild
 title.isbn=ISBN
 title.lastName=Nachname
 title.loginPage=Loginseite
@@ -60,6 +71,7 @@ title.name=Name
 title.order=Befehl
 title.pages=Seiten
 title.password=Passwort
+title.pending=Ausstehend
 title.price=Preis
 title.profile=Profil
 title.quantity=Menge
@@ -71,4 +83,3 @@ title.time=Terminzeit
 title.title=Titel
 title.user=Benutzer
 title.value=Wert
-title.picture=Bild
